--- a/public/wp-content/themes/plants/templates/single-project.html
+++ b/public/wp-content/themes/plants/templates/single-project.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header","theme":"plants","tagName":"header","className":"site-header"} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"type":"default"}} -->
-<main class="wp-block-group"><!-- wp:post-content /--></main>
+<main class="wp-block-group"><!-- wp:post-content {"layout":{"type":"constrained"}} /--></main>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer","theme":"plants","tagName":"footer"} /-->
